# qt-history2

./: .cvsignore  .gitignore  GNUmakefile  GNUmakefile.inc  LICENSE.TROLL  Makefile  Makefile.inc  Makefile.win32  TODO  configure  configure.bat  doc.conf  make.help  projects.pro  qtimage.rc
arch/i386/: arch.pri  qatomic.S  qatomic.cpp
arch/powerpc/: arch.pri  qatomic.cpp  qatomic32.s  qatomic64.s
arch/sparc/: arch.pri  qatomic.S
arch/sparc64/: qatomic.S
config.tests/mac/: mac102.test  mac_version.test  systemdl
config.tests/unix/: 3dnow.test  armfpa.test  checkavail  compile.test  cups.test  echoc.test  endian.test  floatmath.test  fvisibility.test  getaddrinfo.test  ipv6.test  ipv6ifname.test  iwmmxt.test  largefile.test  makeabs  mmx.test  nis.test  objcopy.test  (+10 more)
demos/: README  demos.pro
doc/: .cvsignore  3rdparty.doc  BUGS.txt  HOWTO-Framebuffer.doc  Makefile  TODO.txt  aboutqt.doc  accel.doc  actiongroup-miniwalkthrough.doc  algorithms.doc  annotated.doc  appicon.doc  application-action-walkthrough.doc  application-action.doc  application-walkthrough.doc  application.doc  bidi.doc  binary.doc  bugs.doc  bugs.txt  canvas.doc  casestudyqws.doc  changes.doc  charinput-qws.doc  classchart.doc  classes.doc  collect.doc  commercialeditions.doc  component.doc  containers.doc  coordsys.doc  credits.doc  customstyles.doc  datastreamformat.doc  debug.doc  design.doc  designer.doc  distributingqt.doc  distributingqt2.doc  dnd.doc  (+117 more)
examples/: DIST  GNUmakefile  Makefile  README  examples.pro  examples.t  shapedclock.qdoc
extensions/: DIST  Makefile  extensions.pro
include/: .cvsignore  qt.h
lib/: .cvsignore
makefiles/: aix-gcc-static.cflags  aix-xlc-shared.cflags  aix-xlc-shared.ld  aix-xlc-static  aix-xlc-static.cflags  bsdi-gcc-static  bsdi-gcc-static.cflags  freebsd-gcc-shared  freebsd-gcc-shared.cflags  freebsd-gcc-shared.ld  freebsd-gcc-static  freebsd-gcc-static.cflags  freebsd-shared  hpux-acc-shared.cflags  hpux-acc-shared.ld  hpux-acc-static.cflags  hpux-acc-static.ld  hpux-cc-shared  hpux-cc-shared.cflags  hpux-cc-shared.ld  hpux-cc-static  hpux-cc-static.cflags  hpux-gcc-shared  hpux-gcc-shared.cflags  hpux-gcc-shared.ld  hpux-gcc-static  irix-dcc-shared  irix-dcc-shared.cflags  irix-dcc-static  irix-dcc-static.cflags  irix-dcc-static.ld  irix-gcc-shared  irix-gcc-shared.cflags  irix-gcc-static.cflags  irix-gcc-static.ld  irix-n32-shared.cflags  irix-n32-shared.ld  linux-comeau-static.cflags  linux-gcc-shared  linux-gcc-shared-debug  (+46 more)
mkspecs/: README  aix-g++  aix-xlc  bsdi-g++  dgux-g++  freebsd-g++  hpux-acc  hpux-cc  hpux-g++  hpux-n64  hpux-o64  hurd-g++  irix-64  irix-dcc  irix-g++  irix-n32  irix-o32  linux-cxx  linux-g++  linux-g++.h  linux-kcc  macx-g++  netbsd-g++  openbsd-g++  osf1-cxx  osf1-g++  qnx-g++  reliant-64  reliant-cds  sco-g++  solaris-64  solaris-cc  solaris-cc-gcc  solaris-g++  solaris-g++.h  sunos-g++  ultrix-g++  unixware-g++  unixware7-cc  unixware7-g++  (+7 more)
qmake/: CHANGES  GNUmakefile  GNUmakefile.in  Makefile  Makefile.borland  Makefile.commercial  Makefile.opensource  Makefile.unix  Makefile.win32  Makefile.win32-g++  Makefile.win32-g++-sh  cachekeys.h  main.cpp  meta.cpp  meta.h  option.cpp  option.h  parser.y  project.cpp  project.h  property.cpp  property.h  qmake.pri  qmake.pro  qmake_pch.h  qtmd5.cpp  qtmd5.h  scanner.l
src/: .cvsignore  2.0-classes.txt  GNUmakefile  Makefile  Makefile.sun  Makefile.win32-dll  TODO  libqt.map  makefile.win32  qbase.pri  qcompat.pro  qcore.pro  qgui.pro  qnetwork.pro  qopengl.pro  qsql.pro  qsqlkernel.pro  qt-e.pro  qt.mak  qt.pro  qt.t  qt_gui.pro  qt_install.pri  qt_professional.pri  qt_targets.pri  qtinternal.pro  qtkernel.pro  qtlibs.pro  qtmain.pro  qtwin.mak  qtwin.pro  qtx11.pro  qxml.pro  src.pro  win32.mak
tests/: .cvsignore  Makefile  qstyle.h  qxmlstream.pro  skel.cpp
tests/qdb/xdb-1.2.0/: Makefile.in  NEWS  aclocal.m4  configure  configure.in  ltmain.sh  mkinstalldirs
tests/qdb/xdb-1.2.0/examples/: Makefile.am  Makefile.in  indextst.cpp  sample1.cpp  sample3.cpp  sample4.cpp  sample5.cpp  testdate.cpp  testhtml.cpp
tests/qdb/xdb-1.2.0/html/: ChangeLog  Makefile.in  Xb2cpp.html  cvsdoc  xbase.html  xbase_apps.html  xbase_bib.html  xbase_c1.html  xbase_c10.html  xbase_c15.html  xbase_c17.html  xbase_c18.html  xbase_c4.html  xbase_c6.html  xbase_c9.html  xbase_download.html  xbase_help.html  xbase_order.html  xbase_port.html  xbase_preamble.html  xbase_toc.html
tests/qdb/xdb-1.2.0/tv/: Makefile.am  README  tvbrowse.cpp  tvxbase.cpp
tests/qdb/xdb-1.2.0/xdb/: dbf.cpp  exp.cpp  exp.h  expfunc.cpp  expproc.cpp  fields.cpp  html.h  index.cpp  index.h  lock.cpp  ndx.cpp  ndx.h  retcodes.h  xbase.cpp  xbconfig.h.in  xbstring.cpp  xbstring.h  xtypes.h
tests/sqlinterp/xdb-1.2.0/html/: COPYING.LIB  Makefile.am  xbase_a1.html  xbase_a2.html  xbase_c11.html  xbase_c12.html  xbase_c13.html  xbase_c14.html  xbase_c16.html  xbase_c19.html  xbase_c2.html  xbase_c3.html  xbase_c5.html  xbase_c8.html  xbase_links.html  xbase_locking.html  xbase_mail.html  xbase_probs.html
tests/sqlinterp/xdb-1.2.0/xdb/: Makefile.am  Makefile.in  dbf.cpp  dbf.h  exp.h  html.cpp  memo.cpp  ntx.cpp  ntx.h  options.h  stack.cpp  xbase.h  xbconfig.h  xbexcept.cpp  xbexcept.h  xdate.cpp  xdate.h  xstack.h
tmake/: common.t  debug.t  propagate.t  release.t  shared-debug.t  shared.t  sharedlib.t  static-debug.t  static.t  staticlib.t  subdirs.t
tools/: tools.pro
translations/: README  assistant_de.qm  assistant_de.ts  assistant_pl.qm  assistant_pl.ts  assistant_zh_CN.qm  assistant_zh_CN.ts  designer_de.qm  designer_de.ts  designer_ja.qm  designer_ja.ts  designer_pl.qm  designer_pl.ts  designer_untranslated.ts  designer_zh_CN.qm  designer_zh_CN.ts  linguist_ja.ts  linguist_pl.qm  linguist_pl.ts  linguist_zh_CN.qm  linguist_zh_CN.ts  qt_ar.qm  qt_ar.ts  qt_cs.ts  qt_cz.qm  qt_de.qm  qt_de.ts  qt_es.qm  qt_es.ts  qt_fr.qm  qt_fr.ts  qt_iw.qm  qt_iw.ts  qt_ja_jp.ts  qt_pl.ts  qt_pt.qm  qt_pt.ts  qt_ru.qm  qt_ru.ts  qt_sk.qm  (+16 more)
tutorial/: GNUmakefile  Makefile  README  tutorial.mak  tutorial.pro  tutorial.t
(+19313 files in other folders)
