## Process this file with automake to produce Makefile.in
##
#	This file is part of the XBase libraries
#    Copyright (C) 1998,1999 Vitaly Fedrushkov <fedrushkov@acm.org>

#    This library is free software; you can redistribute it and/or
#    modify it under the terms of the GNU Library General Public
#    License as published by the Free Software Foundation; either
#    version 2 of the License, or (at your option) any later version.

#    This library is distributed in the hope that it will be useful,
#    but WITHOUT ANY WARRANTY; without even the implied warranty of
#    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
#    Library General Public License for more details.

#    You should have received a copy of the GNU Library General Public
#    License along with this library; see the file COPYING.LIB.  If not,
#    write to the Free Software Foundation, Inc., or see
#    http://www.gnu.org/.

EXTRA_DIST = COPYING.LIB Xb2cpp.html cvsdoc xbase.html xbase.jpg	      \
	xbase_a1.html xbase_a2.html xbase_apps.html xbase_bib.html	      \
	xbase_c1.html xbase_c10.html xbase_c11.html xbase_c12.html	      \
	xbase_c13.html xbase_c14.html xbase_c15.html xbase_c16.html	      \
	xbase_c17.html xbase_c18.html xbase_c19.html xbase_c2.html	      \
	xbase_c3.html xbase_c4.html xbase_c5.html xbase_c6.html xbase_c8.html \
	xbase_c9.html xbase_download.html xbase_help.html xbase_links.html    \
	xbase_locking.html xbase_mail.html xbase_order.html xbase_port.html   \
	xbase_preamble.html xbase_probs.html xbase_toc.html zipflow.gif

## Uncomment these to have docs installed by `make install`:

## htmldir = $(prefix)/doc/$(PACKAGE)-$(VERSION)/html
## html_DATA = $(EXTRA_DIST)

MAINTAINERCLEANFILES = Makefile.in
